# python_practice

./: .gitignore  1  pylint_practice.py  pytest_practice.py
lotto/: Makefile  pyproject.toml
lotto/lotto/: __init__.py
lotto/lotto/model/: __init__.py  lotto_number.py
lotto/lotto/view/: __init__.py
lotto/tests/model/: test_lotto_number.py
sample/: Makefile  README.md
sample/tests/: test_core.py
