[tool.poetry]
name = "lotto"
version = "0.1.0"
description = ""
authors = ["kakao <coolofficials@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
mypy = "^1.0.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
